# DRF_COURSE_PROJECT

./: .dockerignore  .env.exa,ple  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  test.py
.github/workflows/: ci.yml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time_to_complete.py  0004_alter_habit_time_to_complete.py
nginx/: nginx.conf
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_telegram_id.py
