[tool.poetry]
name = "drf-course-project"
version = "0.1.0"
description = ""
authors = ["Anton <anton_sima@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
djangorestframework = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
